# Optimised-Read-Until-API

./: README.md  diagram.drawio
minknow_api/: CMakeLists.txt  acquisition_client.cpp  base.cpp  data_client.cc  data_client.cpp  instance_client.cc  manager_client.cc  manager_client.cpp  old_CMakeLists.txt  read_cache.cpp  rpc_options_client.cpp
